--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -1,10 +1,53 @@
 ----------------------------------------------------------------------------
 
 Created:    28th May 2006
-Updated:    28th May 2006
+Updated:    20th September 2006
 
 Open-RJ - History
 -----------------
+
+
+  20th September 2006 - Open-RJ 1.5.3 released
+
+    general:
+      + support for Visual C++ 8.0 makefile(s)
+
+    core library:
+      + support for ORJ_FLAG_FORCEALLFIELDSINTO1RECORD flag
+      ~ strings now avoids any runtime cost for length evaluation
+
+    Open-RJ/.NET:
+      + Support for ForceAllFieldsIntoOneRecord flag
+
+    Open-RJ/Python:
+      + support for FORCE_ALL_FIELDS_INTO_1_RECORD flag
+
+    Open-RJ/Ruby:
+      + support for FORCE_ALL_FIELDS_INTO_1_RECORD flag
+
+  9th August 2006 - Open-RJ 1.5.2 released
+
+    Open-RJ/.NET:
+      ~ Corrected bug in Database class, whereby the Fields property
+        actually returned a collection of Record instances, rather than
+        Field instances.
+      + new single-parameter constructor for FileDatabase, which
+        assumes ElideBlankRecords
+      + new single-parameter constructor for MemoryDatabase, which
+        assumes ElideBlankRecords
+
+  26th July 2006 - Open-RJ 1.5.1 released
+
+    general:
+      ~ Minor changes to Open-RJ/C++ and Open-RJ/STL to reflect changes
+        to STLSoft libraries directory structure.
+
+    Open-RJ/.NET:
+      + Record.GetFieldValue() method overloads
+
+    Open-RJ/Ruby:
+      + Database.records property
+      + Database.fields property
 
   28th May 2006 - Open-RJ 1.5.1 released
 
